# final-framework

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DECISION_LOG.md  Dockerfile  MANIFEST.in  PROJECT_STATE.md  README.md  SESSION_CURRENT.md  SESSION_START.md  aio_framework.py  docker-compose.yml  mkdocs.yml  project_blueprint.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish-docker.yml  publish-pypi.yml
aio/: __init__.py  cli.py  state.py
aio/benchmark/: __init__.py  cli.py  collector.py  regression.py  reporter.py  runner.py
aio/config/: __init__.py  deps.py  memory.py  models.py
aio/dashboard/: __init__.py  app.py  runner.py  store.py
aio/graph/: __init__.py  builder.py  nodes.py  routing.py
aio/layers/: __init__.py  agent_debug.py  cognitive_immune.py  context.py  curiosity.py  failure_recovery.py  hitl.py  immune_learning.py  mcp_client.py  memory.py  memory_backends.py  multi_agent.py  multi_agent_backend.py  neuro_symbolic.py  nsi_integration.py  observability.py  planning.py  safety_governance.py  self_evolution.py  semantic_classifier.py  symbolic_prover.py  tool_gate.py  tool_optimizer.py  verification.py
aio/memory/: __init__.py  bridge.py  embeddings.py  lifecycle.py
aio/streaming/: __init__.py  events.py  manager.py  store.py  transports.py
docs/: CHANGELOG.md  api-reference.md  configuration.md  index.md  quick-start.md  streaming.md
docs/architecture/: 13-layers.md  graph-routing.md
docs/deployment/: docker.md  kubernetes.md
prompts/cognitive/: plan.txt  prove.txt  recon.txt
prompts/meta/: governance.txt  immune.txt  multi_agent.txt  self_evolution.txt
prompts/safety/: boundary.txt  constitutional.txt
prompts/system/: base_system.txt
tests/failure_injection/: test_chaos.py  test_immune_response.py
tests/integration/: test_benchmark_suite.py  test_end_to_end.py  test_hitl_graph.py  test_layer_interactions.py  test_mcp_integration.py  test_memory_pgvector.py  test_multi_agent_backend.py  test_priority3_routing.py  test_streaming_graph.py
tests/unit/: test_agent_debug.py  test_audit_store.py  test_benchmark_collector.py  test_benchmark_regression.py  test_benchmark_reporter.py  test_cli_streaming.py  test_cognitive_immune.py  test_context_manager.py  test_failure_recovery.py  test_governance_dashboard.py  test_hitl.py  test_llm_planner.py  test_mcp_client.py  test_memory_bridge.py  test_memory_embeddings.py  test_memory_hardening.py  test_memory_lifecycle.py  test_memory_tool_integration.py  test_memory_v2.py  test_multi_agent.py  test_neuro_symbolic.py  test_nsi_integration.py  test_observability.py  test_pgvector_backend.py  test_pgvector_persistence_hardening.py  test_safety_governance.py  test_self_evolution.py  test_semantic_classifier.py  test_streaming_manager.py  test_streaming_store.py  test_streaming_transports.py  test_symbolic_prover.py  test_tool_gate.py  test_verifier.py
(+3 files in other folders)
