[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aio-framework"
version = "7.0.0"
description = "All-in-One Agentic Framework — A production-grade, modular AI agent architecture built as a Cognitive Immune System / Agentic OS."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AIO Framework Authors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["agent", "langgraph", "ai", "cognitive", "framework"]

dependencies = [
    "langgraph>=0.0.50",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langsmith>=0.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation>=0.43b0",
    "prometheus-client>=0.19.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn>=0.25.0",
    "jinja2>=3.0.0",
]
llm = [
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
memory-redis = [
    "redis>=5.0.0",
]
memory-postgres = [
    "psycopg2-binary>=2.9.0",
]
benchmark = [
    "psutil>=5.9.0",
    "jinja2>=3.0.0",
]
streaming = [
    "websockets>=12.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]
dev = [
    "aio-framework[all]",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
all = [
    "fastapi>=0.110.0",
    "uvicorn>=0.25.0",
    "jinja2>=3.0.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "sentence-transformers>=2.2.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "psutil>=5.9.0",
    "websockets>=12.0",
]

[project.scripts]
aio = "aio.cli:main"
aio-benchmark = "aio.benchmark.cli:main"

[project.urls]
Homepage = "https://github.com/aio-framework/aio-framework"
Documentation = "https://aio-framework.github.io/aio-framework"
Issues = "https://github.com/aio-framework/aio-framework/issues"

[tool.setuptools.packages.find]
include = ["aio*"]

[tool.setuptools]
py-modules = ["aio_framework"]

[tool.setuptools.package-data]
aio = [
    "prompts/**/*",
    "dashboard/templates/**/*",
    "dashboard/static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=aio --cov-report=term-missing"
